--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </div> -->
       
       <div class="game-details">
-        <div class="copyright">&copy;<span id="current-year">2025</span></div>
+        <div class="copyright">&copy;<span id="current-year">2025</span> <a href="github.com/arman-develops">Amon victor</a></div>
         <div class="scores">
           Computer 11 - Player 22
         </div>
@@ -39,16 +39,24 @@
       </div>
       <div class="game-display">
         <div class="computer-display">
-
+          ✌️
         </div>
         <div class="game-results">
-          <!-- Player Wins -->
+          Player Wins
         </div>
         <div class="player-display">
-  
+          ✌️
         </div>
         <div class="player-options">
-  
+          <div class="rock">
+            ✊
+          </div>
+          <div class="paper">
+            ✋
+          </div>
+          <div class="scissors">
+            ✌️
+          </div>
         </div>
       </div>
     </section>
