--- a/index.html
+++ b/index.html
@@ -7,7 +7,48 @@
     <title>Vite App</title>
   </head>
   <body>
-    <div id="app"></div>
+    <section class="game-arena">
+      <div class="title">
+        <h2>Rock, Paper, Scissors</h2>
+      </div>
+      <div class="instructions">
+        <p>Choose your move to play against the computer</p>
+      </div>
+      <div class="game-controls">
+        <div class="start">
+
+        </div>
+        <div class="play-again">
+
+        </div>
+        <div class="reset">
+
+        </div>
+      </div>
+      <div class="details-section">
+        <div class="copyright">&copy;</div>
+        <span id="current-year"></span>
+        <div class="scores">
+          Computer 11 Player 22
+        </div>
+      </div>
+      <div class="computer-display">
+
+      </div>
+      <div class="game-results">
+
+      </div>
+      <div class="player-display">
+
+      </div>
+      <div class="player-options">
+
+      </div>
+    </section>
+    <section class="footer">
+      <p>Built by <a href="github.com/arman-develops">Amon</a></p>
+      <p>Follow me in Github</p>
+    </section>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
