--- a/index.html
+++ b/index.html
@@ -4,50 +4,57 @@
     <meta charset="UTF-8" />
     <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./src/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Vite App</title>
   </head>
   <body>
     <section class="game-arena">
       <div class="title">
-        <h2>Rock, Paper, Scissors</h2>
+        <h2 class="game-title">Rock Paper Scissors</h2>
       </div>
-      <div class="instructions">
+      <!-- <div class="instructions">
         <p>Choose your move to play against the computer</p>
+      </div> -->
+      
+      <div class="game-details">
+        <div class="copyright">&copy;<span id="current-year">2025</span></div>
+        <div class="scores">
+          Computer 11 - Player 22
+        </div>
       </div>
       <div class="game-controls">
         <div class="start">
-
+          <i class="fa-solid fa-play"></i>
+          Start
         </div>
         <div class="play-again">
-
+          <i class="fa-solid fa-repeat"></i>
+          Play Again
         </div>
         <div class="reset">
-
+          <i class="fa-solid fa-rotate-left"></i>
+          Reset
         </div>
       </div>
-      <div class="details-section">
-        <div class="copyright">&copy;</div>
-        <span id="current-year"></span>
-        <div class="scores">
-          Computer 11 Player 22
+      <div class="game-display">
+        <div class="computer-display">
+
         </div>
-      </div>
-      <div class="computer-display">
-
-      </div>
-      <div class="game-results">
-
-      </div>
-      <div class="player-display">
-
-      </div>
-      <div class="player-options">
-
+        <div class="game-results">
+          <!-- Player Wins -->
+        </div>
+        <div class="player-display">
+  
+        </div>
+        <div class="player-options">
+  
+        </div>
       </div>
     </section>
     <section class="footer">
       <p>Built by <a href="github.com/arman-develops">Amon</a></p>
-      <p>Follow me in Github</p>
+      <p>Follow me on Github</p>
     </section>
     <script type="module" src="/src/main.js"></script>
   </body>
