Added responsiveness to the game

--- a/index.html
+++ b/index.html
@@ -6,12 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./src/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="./src/responsive.css">
     <title>Vite App</title>
   </head>
   <body>
     <section class="game-arena">
       <div class="game-details">
-        <div class="copyright">&copy;<span id="current-year"></span><a href="github.com/arman-develops">Amon victor</a></div>
+        <div class="copyright">
+          &copy;
+          <span id="current-year"></span>
+          <a href="github.com/arman-develops">Amon victor</a>
+        </div>
         <div class="scores" id="scores">
           Computer 0 0 Player
         </div>
